; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/gb-dtmf/extr_gb-dtmf.c_move_cursor.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/gb-dtmf/extr_gb-dtmf.c_move_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @move_cursor(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @move_sprite(i32 23, i64 %5, i64 %6)
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = add nsw i64 %9, 8
  %11 = call i32 @move_sprite(i32 24, i64 %8, i64 %10)
  %12 = load i64, i64* %3, align 8
  %13 = add nsw i64 %12, 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @move_sprite(i32 25, i64 %13, i64 %14)
  %16 = load i64, i64* %3, align 8
  %17 = add nsw i64 %16, 8
  %18 = load i64, i64* %4, align 8
  %19 = add nsw i64 %18, 8
  %20 = call i32 @move_sprite(i32 26, i64 %17, i64 %19)
  ret void
}

declare dso_local i32 @move_sprite(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
